--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
    /**********************
      * Backend base URL
      **********************/
-   const BASE_URL = "/.netlify/functions/proxy";
+   const BASE_URL = "https://vanguardescrow-api-4.onrender.com";
 
     /* Utility: show message in container */
     function showMsg(el, text, type='success') {
