--- a/buyer_dashboard.html
+++ b/buyer_dashboard.html
@@ -199,7 +199,7 @@ async function checkSession() {
   }
 
   try {
-    const base = "/.netlify/functions/proxy"; {
+    const base = "https://vanguardescrow-api-4.onrender.com";
       method: 'GET',
       headers: {
         'Authorization': `Bearer ${token}`,
