--- a/seller_dashboard.html
+++ b/seller_dashboard.html
@@ -467,7 +467,7 @@ window.addEventListener("DOMContentLoaded", async () => {
     }
   }
 
-  const base = "/.netlify/functions/proxy";
+ const BASE_URL = "https://vanguardescrow-api-4.onrender.com";
   
   document.getElementById("deliveryForm")?.addEventListener("submit", handleDeliverySubmit);
   document.getElementById("releaseRequestForm")?.addEventListener("submit", handleReleaseRequest);
