--- a/seller_dashboard.html
+++ b/seller_dashboard.html
@@ -377,7 +377,7 @@ window.addEventListener("DOMContentLoaded", async () => {
     try {
       const formData = new FormData(form);
       
-      const res = await fetch("/.netlify/functions/proxy/sellerSubmitDelivery", { 
+      const res = await fetch(base + "/sellerSubmitDelivery", { 
         method: "POST",
         headers: {
           'Authorization': `Bearer ${token}`
@@ -433,7 +433,7 @@ window.addEventListener("DOMContentLoaded", async () => {
     const data = Object.fromEntries(new FormData(form).entries());
 
     try {
-      const res = await fetch("/.netlify/functions/proxy/sellerRequestRelease", {
+      const res = await fetch(base + "/sellerRequestRelease", {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
