--- a/buyer_dashboard.html
+++ b/buyer_dashboard.html
@@ -192,21 +192,21 @@
 let currentUser = null;
 
 async function checkSession() {
-  const token = localStorage.getItem('token');
+  const token = localStorage.getItem('authToken');
   if (!token) {
     console.warn('No auth token found');
     return false;
   }
 
   try {
-  const base = "https://vanguardescrow-api-4.onrender.com";
-  const res = await fetch(base + '/me', {
-    method: 'GET',
-    headers: {
-      'Authorization': `Bearer ${token}`,
-      'Content-Type': 'application/json'
-    }
-  });
+    const base = "https://vanguardescrow-api-4.onrender.com";
+    const res = await fetch(base + '/me', {
+      method: 'GET',
+      headers: {
+        'Authorization': `Bearer ${token}`,
+        'Content-Type': 'application/json'
+      }
+    });
     
     if (!res.ok) {
       console.warn('No valid session found.');
