--- a/buyer_dashboard.html
+++ b/buyer_dashboard.html
@@ -192,7 +192,7 @@
 let currentUser = null;
 
 async function checkSession() {
-  const token = localStorage.getItem('authToken');
+  const token = localStorage.getItem('token');
   if (!token) {
     console.warn('No auth token found');
     return false;
