--- a/buyer_dashboard.html
+++ b/buyer_dashboard.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+paymentMethod<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
@@ -63,6 +63,7 @@
 <div id="escrowSection">
 <div class="card">
 <form id="createEscrowForm" method="POST">
+<input id="sellerEmail" name="seller_email" placeholder="Seller Email Address" type="email"/>
 <textarea id="agreement" name="description" placeholder="Enter agreement terms"></textarea>
 <input id="amount" name="amount" placeholder="Enter amount" type="number"/>
 <input id="paymentMethod" name="paymentMethod" placeholder="Enter payment method" type="text"/>
