--- a/seller_dashboard.html
+++ b/seller_dashboard.html
@@ -204,7 +204,7 @@ let currentUser = null;
 let savedWallets = {};
 
 async function checkSession() {
-  const token = localStorage.getItem('authToken');
+  const token = localStorage.getItem('token');
   if (!token) {
     console.warn('No auth token found');
     return false;
@@ -212,6 +212,7 @@ async function checkSession() {
 
   try {
     const base = "https://vanguardescrow-api-4.onrender.com";
+    const res = await fetch(base + '/me', {
       method: 'GET',
       headers: {
         'Authorization': `Bearer ${token}`,
