--- a/buyer_dashboard.html
+++ b/buyer_dashboard.html
@@ -148,13 +148,13 @@ paymentMethod<!DOCTYPE html>
 </div>
 <div class="card">
 <form id="markPaidForm" method="POST">
-<input id="escrowIdConfirm" name="escrowId" placeholder="Escrow ID" type="text"/>
+<input id="escrowIdConfirm" name="escrow_id" placeholder="Escrow ID" type="text"/>
 <button class="action" id="confirmDepositBtn" type="submit" data-i18n="btn.mark_paid">Mark as Paid</button>
 <div class="msg" id="markMsg"></div></form>
 </div>
 <div class="card">
 <form id="releaseFundsForm" method="POST">
-<input id="escrowIdRelease" name="escrowId" placeholder="Escrow ID" type="text"/>
+<input id="escrowIdRelease" name="escrow_id" placeholder="Escrow ID" type="text"/>
 <button class="action" id="releaseFundsBtn" type="submit" data-i18n="btn.release_funds">Release Funds to Seller</button>
 <div class="msg" id="releaseMsg"></div></form>
 </div>
