--- a/seller_dashboard.html
+++ b/seller_dashboard.html
@@ -202,7 +202,7 @@
 <script>
 let currentUser = null;
 let savedWallets = {};
-const BASE_URL = "https://vanguardescrow-api-4.onrender.com"; // ADD THIS LINE
+const BASE_URL = "https://vanguardescrow-api-4.onrender.com";
 
 async function checkSession() {
   const token = localStorage.getItem('authToken');
